# OrbiTTY

./: .gitignore  Cargo.toml  LICENSE  README.md
data/: style.css
src/: about.rs  app.rs  arena.rs  filetree.rs  main.rs  menu.rs  prefs.rs  session.rs  shortcuts.rs  shortcuts.ui  sidebar.rs  templates.rs  window.rs  workspace.rs
src/session/: runtime.rs  view.rs
src/workspace/: dnd.rs  focus.rs
